[gd_scene load_steps=5 format=3 uid="uid://ylmoqwimv31g"]

[ext_resource type="Script" uid="uid://qayi8dq3f88s" path="res://src/UI/DebugInfo/DebugInfo.gd" id="1"]
[ext_resource type="Theme" uid="uid://d2y1ya8pt8ye2" path="res://src/UI/DebugInfo/Debug.tres" id="2"]
[ext_resource type="FontFile" uid="uid://crpbt8dbs8j7a" path="res://assets/UI/Font/momo.ttf" id="3_d57kx"]
[ext_resource type="FontFile" uid="uid://dwxtgalfv3erc" path="res://assets/UI/Font/momomono.ttf" id="5_osv66"]

[node name="DebugInfo" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2")
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="General" type="HBoxContainer" parent="VBox"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="VBox/General"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("2")
text = "Laputa"

[node name="FPS" type="Label" parent="VBox/General"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "FPS: "

[node name="Screen" type="Label" parent="VBox/General"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "Screen:"

[node name="Arrays" type="HBoxContainer" parent="VBox/General"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 4

[node name="Guns" type="VBoxContainer" parent="VBox/General/Arrays"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="VBox/General/Arrays/Guns"]
layout_mode = 2
theme_override_colors/font_color = Color(0.501961, 0.501961, 0.501961, 1)
text = "GUNS"

[node name="Music" type="VBoxContainer" parent="VBox/General/Arrays"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="VBox/General/Arrays/Music"]
layout_mode = 2
theme_override_colors/font_color = Color(0.501961, 0.501961, 0.501961, 1)
text = "MUSIC"

[node name="Sfx" type="VBoxContainer" parent="VBox/General/Arrays"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="VBox/General/Arrays/Sfx"]
layout_mode = 2
theme_override_colors/font_color = Color(0.501961, 0.501961, 0.501961, 1)
text = "SFX"

[node name="Inventory" type="VBoxContainer" parent="VBox/General/Arrays"]
visible = false
layout_mode = 2
mouse_filter = 2

[node name="Topic" type="VBoxContainer" parent="VBox/General/Arrays"]
visible = false
layout_mode = 2
mouse_filter = 2

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
mouse_filter = 2

[node name="C1" type="HBoxContainer" parent="VBox/HBox"]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("2")

[node name="Q" type="VBoxContainer" parent="VBox/HBox/C1"]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("2")

[node name="Bars" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_colors/font_color = Color(0.501961, 0.501961, 0.501961, 1)
theme_override_fonts/font = ExtResource("3_d57kx")
text = "BARS"

[node name="HP" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "HP: "

[node name="Money" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "Tot XP: "

[node name="XP" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "Wp XP: "

[node name="WeaponCooldown" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "CD: "

[node name="Movement" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_fonts/font = ExtResource("3_d57kx")
text = "MOVE"

[node name="Velocity" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "Vel: "

[node name="Speed" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "Speed: "

[node name="Gravity" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "Grav: "

[node name="Pos" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "Position: "

[node name="Animation" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "Anim: "

[node name="State" type="Label" parent="VBox/HBox/C1/Q"]
visible = false
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "State: "

[node name="Direction" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_fonts/font = ExtResource("3_d57kx")
text = "DIR"

[node name="MoveDir" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "Move: "

[node name="LookDir" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "Look: "

[node name="LockDir" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "Lock: "

[node name="ShootDir" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "Shoot: "

[node name="A" type="VBoxContainer" parent="VBox/HBox/C1"]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("2")

[node name="Bars" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_fonts/font = ExtResource("5_osv66")

[node name="HP" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("5_osv66")
text = "-"

[node name="Money" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("5_osv66")
text = "-"

[node name="XP" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("5_osv66")
text = "-"

[node name="WeaponCooldown" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("5_osv66")
text = "-"

[node name="Movement" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_fonts/font = ExtResource("5_osv66")

[node name="Velocity" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("5_osv66")
text = "-"

[node name="Speed" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("5_osv66")
text = "-"

[node name="Gravity" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("5_osv66")
text = "-"

[node name="Pos" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("5_osv66")
text = "-"

[node name="Animation" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "-"

[node name="State" type="Label" parent="VBox/HBox/C1/A"]
visible = false
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("5_osv66")
text = "-"

[node name="Direction" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_fonts/font = ExtResource("5_osv66")

[node name="MoveDir" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("5_osv66")
text = "-"

[node name="LookDir" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("5_osv66")
text = "-"

[node name="LockDir" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("5_osv66")
text = "-"

[node name="ShootDir" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("5_osv66")
text = "-"

[node name="C2" type="HBoxContainer" parent="VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
mouse_filter = 2
theme = ExtResource("2")

[node name="Q" type="VBoxContainer" parent="VBox/HBox/C2"]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("2")

[node name="Cam" type="Label" parent="VBox/HBox/C2/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_fonts/font = ExtResource("3_d57kx")
text = "CAM"

[node name="CameraPos" type="Label" parent="VBox/HBox/C2/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "Pos: "

[node name="CameraOffset" type="Label" parent="VBox/HBox/C2/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "Offset: "

[node name="State" type="Label" parent="VBox/HBox/C2/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_fonts/font = ExtResource("3_d57kx")
text = "STATE"

[node name="Disabled" type="Label" parent="VBox/HBox/C2/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "Disabl: "

[node name="CanInput" type="Label" parent="VBox/HBox/C2/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "Input:"

[node name="Invincible" type="Label" parent="VBox/HBox/C2/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "Invin: "

[node name="Inspect" type="Label" parent="VBox/HBox/C2/Q"]
visible = false
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "Inspec: "

[node name="Floor" type="Label" parent="VBox/HBox/C2/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "Floor: "

[node name="Wall" type="Label" parent="VBox/HBox/C2/Q"]
visible = false
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "Wall:"

[node name="Crouch" type="Label" parent="VBox/HBox/C2/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "Crouch"

[node name="SSP" type="Label" parent="VBox/HBox/C2/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "SSP: "

[node name="Water" type="Label" parent="VBox/HBox/C2/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "Water: "

[node name="Object" type="Label" parent="VBox/HBox/C2/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_fonts/font = ExtResource("3_d57kx")
text = "OBJ"

[node name="Front" type="Label" parent="VBox/HBox/C2/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "Front: "

[node name="Middle" type="Label" parent="VBox/HBox/C2/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "Middle: "

[node name="Back" type="Label" parent="VBox/HBox/C2/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "Back: "

[node name="A" type="VBoxContainer" parent="VBox/HBox/C2"]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("2")

[node name="View" type="Label" parent="VBox/HBox/C2/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_fonts/font = ExtResource("5_osv66")

[node name="CameraPos" type="Label" parent="VBox/HBox/C2/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("5_osv66")
text = "-"

[node name="CameraOffset" type="Label" parent="VBox/HBox/C2/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("5_osv66")
text = "-"

[node name="State" type="Label" parent="VBox/HBox/C2/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_fonts/font = ExtResource("5_osv66")

[node name="Disabled" type="Label" parent="VBox/HBox/C2/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "-"

[node name="CanInput" type="Label" parent="VBox/HBox/C2/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "-"

[node name="Invincible" type="Label" parent="VBox/HBox/C2/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "-"

[node name="Inspect" type="Label" parent="VBox/HBox/C2/A"]
visible = false
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("5_osv66")
text = "-"

[node name="Floor" type="Label" parent="VBox/HBox/C2/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "-"

[node name="Wall" type="Label" parent="VBox/HBox/C2/A"]
visible = false
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "-"

[node name="Crouch" type="Label" parent="VBox/HBox/C2/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "-"

[node name="SSP" type="Label" parent="VBox/HBox/C2/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "-"

[node name="Water" type="Label" parent="VBox/HBox/C2/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3_d57kx")
text = "-"

[node name="Object" type="Label" parent="VBox/HBox/C2/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_fonts/font = ExtResource("5_osv66")

[node name="Front" type="Label" parent="VBox/HBox/C2/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("5_osv66")
text = "-"

[node name="Middle" type="Label" parent="VBox/HBox/C2/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("5_osv66")
text = "-"

[node name="Back" type="Label" parent="VBox/HBox/C2/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("5_osv66")
text = "-"
